--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -8,9 +8,9 @@ mixin header
 				+e.NAV.menu
 					a(href="#about") Главная
 					a(href="#trainings") Занятия
-					a(href="#normotive") Сдача нормативов
+					a(href="#normative") Сдача нормативов
 					a(href="#inventory") Инвентарь
-					a(href="#foot") Контакты
+					a(href="#footer") Контакты
 					p.tel Киев, +380000000000
 			+b.more
 				+e.line
