--- a/src/_partials/main_screen.pug
+++ b/src/_partials/main_screen.pug
@@ -6,8 +6,8 @@ mixin main_screen
 			+b.kindsTrain
 				hr.del-white
 				+e.items
-					a.wow.zoomIn(href="#") Групповые тренировки
+					a.wow.zoomIn(href="#trainings") Групповые тренировки
 					.line-vertical
-					a.wow.zoomIn(href="#" data-wow-delay="0.2s") Индивидуальные тренировки
+					a.wow.zoomIn(href="#trainings" data-wow-delay="0.2s") Индивидуальные тренировки
 					.line-vertical
-					a.wow.zoomIn(href="#" data-wow-delay="0.4s") Спортивные тренировки
+					a.wow.zoomIn(href="#trainings" data-wow-delay="0.4s") Спортивные тренировки
