--- a/src/_partials/normotive_arr.pug
+++ b/src/_partials/normotive_arr.pug
@@ -8,36 +8,36 @@
 		{
 			name: 'ОКД (общий курс дрессировки)',
 			img: 'img/22540212_1878445325804930_7544601710347339217_n.jpg',
-			fullInfo: ''
+			fullInfo: 'Норматив по дрессировке собак, включает в себя упражнения на послушание и ловкость. Является "общим" (отсюда и название), предварительным, основным курсом перед специальными спортивными и служебными видами дрессировки собакОКД отличается жёсткими требованиями к действиям дрессировщика по управлению собакой и к точности выполнения собакой каждого навыка.В настоящее время этот курс относится к национальным видам дрессировки, по нему проводятся испытания и соревнования.В процессе подготовки к сдаче ОКД у собаки вырабатываются дисциплинирующие ее навыки и позволяющее управлять её поведением, как в быту, так и в практической деятельности и занятиях спортом.Большинство приёмов ОКД отрабатывают при подготовке служебных собак всех видов. Продолжительность курса зависит от степени предварительной подготовленности собаки и от количества и качества навыков, необходимых для той или иной службы.После окончания основного курса дрессировки собаки могут продолжать занятия в других спортивных и служебных дисциплинах и совершенствовать свои навыки. Например, в защитно-караульной службе, при поиске взрывчатых или наркотических веществ, поисково-спасательной службе.'
 		},
 		{
 			name: 'ЗКС (защитно-караульная служба)',
 			img: 'img/22688660_1878444335805029_6548457807566621423_n.jpg',
-			fullInfo: ''
+			fullInfo: 'Защитный норматив по дрессировке собак, созданный в СССР. Основная цель -- выработка охранно-защитных навыков у собаки, а также умения запаховой идентификации. Хорошо обученные собаки по курсу ЗКС с успехом могут защитить своего хозяина, его дом и имущество. Это объясняется тем, что навыки, полученные собакой по ЗКС, отличаются эффективностью, а не зрелищностью. Обучение направлена на моделирование «жизненных ситуаций», в которых могут пригодится навыки защиты. Собака учится быстро принимать решение и независимо оценивать степень опасности ситуации для хозяина.В течение десятков лет нормативы по ЗКС неоднократно менялись и, тем не менее, эффективность курса и на сегодняшний день остается в достаточно высокой. На базе навыков ЗКС готовят розыскных, караульных, сторожевых, конвойных собак. Для этого собаки проходят курс специальной дрессировки, который включает в себя более обширную программу подготовки в соответствии со специализацией и дальнейшим применением собаки.'
 		},
 		{
 			name: 'Караульная cлужба (КС)',
 			img: 'img/23032568_1882804778702318_2219851142223180674_n.jpg',
-			fullInfo: ''
+			fullInfo: 'Вид прикладного использования дрессированных собак для охраны. При подготовке собаки к караульной службе кинолог формирует у нее навыки охраны проводника, вещей, территории, а также поиска, задержания и конвоирования нарушителя. Хорошо подготовленная караульная собака способна самостоятельно принимать решение в критической ситуации, оценивать степень опасности постороннего для проводника, а также эффективно обнаруживать нарушителя в различных внешних условиях, когда человек не справился бы с такой задачей (поиск нарушителя в темноте, патрулирование обширной территории, обнаружение нарушителя по запаховому следу).'
 		},
 		{
 			name: 'Обидиенс',
 			img: 'img/27503241_1933083400341122_312661415353725258_o.jpg',
-			fullInfo: ''
+			fullInfo: 'это международный норматив по послушанию, самый сложный из всех официально признанных нормативов Международной Кинологической Федерации FCI. Обучение собаки навыкам для этого вида кинологического спорта требует от дрессировщика обширных знаний, опыта, точности в поощрении желаемого поведения и нестандартных решений в объяснении сложных задач. Подготовка щенка с нуля до выступления в самом сложном классе Обидиенс-3 занимает около трех лет при условии регулярных занятий каждый день или несколько раз в неделю. Чемпионат Мира по обидиенс - самые престижные и многочисленные международные соревнования в этом виде спорта. Они проводятся под эгидой МКФ раз в год в различных странах Европы. Соревнования проводятся в личном и командном зачете, участвуют национальные сборные стран, членов МКФ, прошедшие серию отборочных соревнований в своих странах, чтобы получить право представлять их на Чемпионате мира. Обидиенс - это международная система, по которой регулярно проводятся соревнования мирового уровня. Самое престижное из них - Чемпионат Мира по версии FCI.'
 		},
 		{
 			name: 'IGP (IPO)',
 			img: 'img/28828219_1964568747192587_7364280868887049012_o.jpg',
-			fullInfo: ''
+			fullInfo: 'IGP (Vielseitigkeitsprufung fur Gebrauchshunde nach International Prufungsordnung) - трёхуровневые испытания служебных собак, включающие в себя следовую работу, послушание и защитную службы, утверждённые FCI. По международным правилам племенного разведения, собаки служебных пород допускаются к разведению только после сдачи IGP-1. C 1 января 2019 года вступили в силу обновленные правила Международной Кинологической Федерации по этому нормативу, до этого называвшемуся IPO .IGP делится на 3 степени — I, II и III, последовательно усложняясь. Эти степени включают следовую работу (раздел A), послушание (раздел B) и защиту проводника (раздел C).'
 		},
 		{
 			name: 'Мондьоринг',
 			img: 'img/31047750_233526237393519_1152060823225499648_o.jpg',
-			fullInfo: ''
+			fullInfo: 'Этот вид кинологического спорта очень популярен во Франции, Бельгии, Швейцарии, Италии, Финляндии — практически во всех Европейских странах.От собак требуется работа при отвлекающих факторах и усложнениях очень высоко уровня (звуки, запахи, препятствия, сложная окружающая среда). Этого можно ожидать только от животных с очень устойчивой нервной системой, прекрасным желанием работать, сбалансированной мотивацией и отсутствием фобий. Однако, даже самые одаренные с точки зрения генетика собаки, без грамотной и длительной подготовки не смогут справиться с программой Мондьоринга. Мондьоринг не является допусковым нормативом к разведению. Соревнования по мондьорингу включают в себя три уровня сложности. Проводится монопородный Чемпионат Мира среди Бельгийских овчарок в разделе мондьоринг во всех трёх уровнях. А также всепородный Кубок Мира и Гран При, где Кубок Мира присуждается только в третьем, самом сложном уровне сложности. Также в рамках Кубка Мира проходят соревнования помощников в защитном разделе (фигурантов). Победители этих соревнований становятся фигурантами на следующем Кубке Мира. Каждый из уровней включает в себя три раздела: послушание, прыжки, защиту. При увеличении уровня сложности увеличивается количество упражнений во всех разделах, а также время выступления, например в первом уровне 15 минут, в третьем - до 45 минут. Все разделы проводник с собакой проходят подряд без отдыха. Самым зрелищным является защита, включающая в себя фронтальную атаку, защиту проводника, атаку вдогонку, обыск-облайку-конвой (с попытками побега), охрану вещи, прерванную атаку вдогонку, фронтальную атаку с предметами.'
 		},
 		{
 			name: 'Ралли-обидиенс',
 			img: 'img/46482195_2146334512349342_840820821210431488_n.jpg',
-			fullInfo: ''
+			fullInfo: 'Ралли-обидиенс — молодой вид кинологического спорта, представляющий собой разновидность норматива по послушанию. Многие упражнения основаны на правилах международного класса обидиенс, признанного МКФ, но видоизменены. Ралли-обидиенс ближе к игровым видам дрессировки, чем обидиенс. Это более зрелищный, менее жесткий в судействе и требованиях к собаке и проводнику норматив. Собака и проводник проходят последовательность упражнений с различными усложнениями, в которых собака демонстрирует навыки движения рядом, принятие позиций, апортировку, высыл в указанном направлении. Это вид спорта доступен для проводников с любым уровнем подготовки и собак любой породы и возраста'
 		}
 		];
