--- a/src/_partials/about_trainings.pug
+++ b/src/_partials/about_trainings.pug
@@ -19,15 +19,11 @@ mixin about_trainings
 				p Команда кинологического клуба проводит групповую дрессировку собак. Программа включает общий курс дрессировки, помогает животному социально адаптироваться в среде
 				span Узнать больше...
 				+b.fullinfo
-					img(src="../img/cross.svg").cross
 					+e.content
+						img(src="img/cross.svg").cross
 						+e.text
 							h3 Групповые тренировки
 							p Команда кинологического клуба проводит групповую дрессировку собак. Программа включает общий курс дрессировки, помогает животному социально адаптироваться в среде сородичей, а также выгодна хозяину — групповые занятия стоят дешевле индивидуальных. Многие хозяева занимаются со своей собакой самостоятельно, учат ее выполнять простейшие команды. Однако в какой-то момент выясняется, что этих тренировок явно недостаточно, чтобы собака приобрела все необходимые в повседневной жизни навыки. Хорошим вариантом в этом случае станут групповые занятия. Мы предлагаем вам площадку, на которой групповую дрессировку собак проводят настоящие профессионалы.
-						form(class="form" name="question" action="")
-							p Задать вопрос:
-							input(type="text")
-							button отправить сообщение
 
 			+e.type
 				+e.img
@@ -36,15 +32,11 @@ mixin about_trainings
 				p Команда кинологического клуба проводит индивидуальную дрессировку собак. Опытный кинолог разработает специальную программу для каждой собаки
 				span Узнать больше...
 				+b.fullinfo
-					img(src="../img/cross.svg").cross
+					img(src="img/cross.svg").cross
 					+e.content
 						+e.text
 							h3 Индивидуальные тренировки
 							p Команда кинологического клуба проводит индивидуальную дрессировку собак. Опытный кинолог разработает специальную программу с учетом особенностей личности, возраста и породы собаки, а также целей, которые ставит перед ней хозяин — например, адекватное поведение в городской среде или функции телохранителя.Различные породы собак по-разному реагируют на воспитание и обучение социальным навыкам. Вот почему во многих случаях требуется индивидуальная программа. Кинологи нашего клуба помогут вам выбрать команды для отработки, необходимые именно вашему питомцу.
-						form(class="form" name="question" action="")
-							p Задать вопрос:
-							input(type="text")
-							input(type="submit") 
 			+e.type
 				+e.img
 					img(src="img/54728185_2234453540204105_5029285456689233920_n.jpg")
@@ -52,12 +44,8 @@ mixin about_trainings
 				p Специалисты кинологического клуба предлагают дрессировку собак на защиту. Пройдя курс в нашем клубе, ваш пес сможет открыть в себе новые качества
 				span Узнать больше...
 				+b.fullinfo
-					img(src="../img/cross.svg").cross
+					img(src="img/cross.svg").cross
 					+e.content
 						+e.text
 							h3 Спортивные тренировки
 							p Специалисты кинологического клуба предлагают дрессировку собак на защиту. Пройдя курс в нашем клубе, ваш пес сможет открыть в себе новые качества и станет истинным помощником в охране не только жизни хозяина, но и его имущества.Самостоятельная дрессировка собаки для защиты хозяина слишком сложна для неподготовленного владельца пса. Необходимо знать особенности темперамента животного, его возможности, уметь раскрыть потенциал. Потому лучше доверить процесс в руки специалистов. После прохождения подготовки вам будет не страшно отправиться на улицу – в сложной ситуации четвероногий друг сможет постоять за  вас.
-						form(class="form" name="question" action="")
-							p Задать вопрос:
-							input(type="text")
-							button отправить сообщение
