--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -210,56 +210,7 @@ hr
 			position: absolute
 			bottom: 0
 
-	.fullinfo
-		display: none
-		position: fixed
-		background-color: rgba(255, 255, 255, .5)
-		width: 100vw
-		height: 100vh
-		z-index: 10
-		top: 0
-		left: 0
-		justify-content: center
-		align-items: center
 
-		&__text
-			height: 70%
-			overflow-y: scroll
-
-		&__content
-			padding: 10px
-			background-color: #fff
-			width: 40%
-			height: 90%
-			margin: 0
-			position: absolute
-			top: 50%
-			left: 50%
-			margin-right: -50%
-			transform: translate(-50%, -50%)
-			box-shadow: 0px 0px 100px 20px rgba(0,0,0,0.5)
-			
-			form
-				display: flex
-				flex-direction: column
-				position: absolute
-				width: 96%
-				bottom: 10px
-			
-			input
-				height: 35px
-				border: 1px solid #5d0080
-				border-radius: 5px
-				padding-left: 10px
-				margin-bottom: 10px
-
-			button
-				height: 50px
-				background-color: limegreen
-				border-radius: 5px
-				border: 0
-				box-shadow: none
-				cursor: pointer
 
 
 .pictures2
@@ -333,31 +284,31 @@ hr
 		align-items: center
 		position: absolute
 
-	.fullinfo
-		background-color: rgba(255, 255, 255, .9)
-		display: none
-		position: fixed
-		z-index: 10
-		width: 100vw
+.fullinfo
+	background-color: rgba(255, 255, 255, .9)
+	display: none
+	position: fixed
+	z-index: 10
+	width: 100vw
+	height: 100vh
+	top: 0
+	left: 0
+
+	&__content
+		display: flex
+		justify-content: center
+		align-items: center
+		flex-direction: column
 		height: 100vh
-		top: 0
-		left: 0
 
-		&__content
-			display: flex
-			justify-content: center
-			align-items: center
-			flex-direction: column
-			height: 100vh
+	&__title
+		font-size: 30px
+		font-weight: 900
 
-		&__title
-			font-size: 30px
-			font-weight: 900
-
-		&__text
-			width: 80%
-			line-height: 1.4
-			font-size: 18px
+	&__text
+		width: 80%
+		line-height: 1.4
+		font-size: 18px
 
 .content
 	margin-bottom: 5px
@@ -401,6 +352,57 @@ hr
 			object-fit: cover
 			width: 100%
 			height: 100%
+
+
+.form_cont
+	width: 100%
+	height: 100vh
+	display: flex
+	justify-content: center
+	align-items: center
+	position: fixed
+	top: 50%
+	left: 0
+	z-index: 2
+
+	.form
+		display: flex
+		flex-direction: column
+		justify-content: center
+		align-items: center
+		width: 45%
+		bottom: 10px
+		background-color: rgba(0, 0, 0, .7)
+		padding: 40px 20px
+		align-items: center
+		margin-top: -50%
+
+	p
+		color: white
+		text-transform: uppercase
+		letter-spacing: 3px
+		margin-bottom: 40px
+
+	input
+		width: 90%
+		height: 50px
+		border: 1px solid #5d0080
+		padding-left: 10px
+		margin-bottom: 20px
+
+	button
+		width: 90%
+		height: 55px
+		border: 0
+		box-shadow: none
+		cursor: pointer
+		background-color: #5d0080;
+		color: white
+		margin-bottom: 20px
+		margin-top: 15px
+		font-size: 17px
+		letter-spacing: 3px
+		text-transform: uppercase
 
 .footer
 	background-color: #5d0080
