--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,7 @@ include _partials/main_screen.pug
 include _partials/about_trainings.pug
 include _partials/normative.pug
 include _partials/inventory.pug
+include _partials/form_sing in.pug
 include _partials/footer.pug
 doctype html 
 html
@@ -20,6 +21,7 @@ html
 		+about_trainings
 		+normative
 		+inventory
+		+form_singIn
 		+footer
 
 
